Reorganization of functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,18 @@
 export(defaultFuncHandle)
 export(digestOfFunc)
 export(initCache)
-exportMethods(get_RDSversion)
-exportMethods(get_cFolder)
-exportMethods(get_dFile)
-exportMethods(get_prevVersion)
-exportMethods(get_syncAllowed)
-exportMethods(get_version)
+exportMethods("overwrite<-")
+exportMethods(cFolder)
+exportMethods(dFile)
 exportMethods(listCache)
+exportMethods(overwrite)
+exportMethods(prevVersion)
+exportMethods(rdsVersion)
 exportMethods(readCache)
 exportMethods(removeCache)
 exportMethods(storeCache)
 exportMethods(synchronizeCache)
+exportMethods(version)
 import(methods)
 importFrom(digest,digest)
 importFrom(utils,capture.output)
